[package]
name = "math"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
pretty_assertions = "1.3.0"

[dependencies]
nalgebra-glm = "0.18.0"
rand = "0.8.1"
spade = "2.2.0"
bracket-noise = "~0.8.0"